--- a/sileodepictions/SettingsRevamp.json
+++ b/sileodepictions/SettingsRevamp.json
@@ -76,7 +76,7 @@
 "views":[
 {
 "class":"DepictionMarkdownView",
-"markdown":"#### Phiên bản 2.0.2\n\Đã sửa lỗi xóa mũi tên khiến không thể thêm bàn phím. bây giờ tất cả các mũi tên sẽ bị xóa ngoại trừ trên bàn phím."
+"markdown":"#### Phiên bản 2.0.2\n\nĐã sửa lỗi xóa mũi tên khiến không thể thêm bàn phím. bây giờ tất cả các mũi tên sẽ bị xóa ngoại trừ trên bàn phím."
 },
 {
 "class":"DepictionLabelView",
