--- a/sileodepictions/LetMeKnow.json
+++ b/sileodepictions/LetMeKnow.json
@@ -44,7 +44,7 @@
 {
 "class":"DepictionTableTextView",
 "title":"Tác giả",
-"text":"SOPPPra"
+"text":"P2KDev"
 },
 {
 "class":"DepictionTableTextView",
