--- a/sileodepictions/SnowBoard.json
+++ b/sileodepictions/SnowBoard.json
@@ -18,7 +18,7 @@
 "itemSize":"{185,400}"
 },
 {
-"markdown":"# Snowboard (Rootless) \n\n### Tweak này dùng để thay đổi chủ đề trên iPhone đã Jailbreak\n\n### Các tính năng:\n\n+ Tweak này được coi là sự kế thừa cổ xưa của WinterBoard : có khả năng thay thế themes nhanh chóng và thay đổi giữ các themes một cách liên tục.\n\n+ Bạn đã nhàm chán với những biểu tượng mặc định? Và đây là tweak giúp bạn thay đổi những biểu tượng đó. Và nó có thêm nhiều tính năng tuyệt vời khác\n\n+ Cho phép bạn thêm các chủ đề vào Màn hình chính. Có khả năng thay phông chữ, thay thế hình ảnh Respring, thay đổi thanh Dock, chuyển dấu chấm trang, đổi các biểu tượng trong cài đặt, chèn thanh trạng thái\n\n+ Phiên bản này đã được A @Vũ Quang fix lại và hoạt động Full Mask. \n\n\n",
+"markdown":"# Snowboard (Rootless) \n\n### Tweak này dùng để thay đổi chủ đề trên iPhone đã Jailbreak\n\n### Các tính năng:\n\n+ Tweak này được coi là sự kế thừa cổ xưa của WinterBoard : có khả năng thay thế themes nhanh chóng và thay đổi giữ các themes một cách liên tục.\n\n+ Bạn đã nhàm chán với những biểu tượng mặc định? Và đây là tweak giúp bạn thay đổi những biểu tượng đó. Và nó có thêm nhiều tính năng tuyệt vời khác\n\n+ Cho phép bạn thêm các chủ đề vào Màn hình chính. Có khả năng thay phông chữ, thay thế hình ảnh Respring, thay đổi thanh Dock, chuyển dấu chấm trang, đổi các biểu tượng trong cài đặt, chèn thanh trạng thái \n\n\n",
 "useSpacing":"true",
 "class":"DepictionMarkdownView"
 },
