--- a/sileodepictions/SettingsRevamp.json
+++ b/sileodepictions/SettingsRevamp.json
@@ -1,6 +1,6 @@
 {
 "minVersion":"0.4",
-"headerImage":"https://support-jailbreak.github.io/features/SettingsRevamp.png",
+"headerImage":"https://support-jailbreak.github.io/features/sileo.png",
 "tintColor":"#5777B8",
 "tabs":[
 {
@@ -11,6 +11,14 @@
 "screenshots":[
 {
 "url":"https://support-jailbreak.github.io/infodeb/SettingsRevamp2/Screenshots/1.png",
+"accessibilityText":"Screenshot"
+},
+{
+"url":"https://support-jailbreak.github.io/infodeb/SettingsRevamp2/Screenshots/2.png",
+"accessibilityText":"Screenshot"
+},
+{
+"url":"https://support-jailbreak.github.io/infodeb/SettingsRevamp2/Screenshots/3.png",
 "accessibilityText":"Screenshot"
 }
 ],
@@ -54,7 +62,7 @@
 {
 "class":"DepictionTableTextView",
 "title":"Ngày tải lên",
-"text":"4/5/2023"
+"text":"25/5/2023"
 },
 {
 "class":"DepictionTableTextView",
@@ -76,7 +84,7 @@
 "views":[
 {
 "class":"DepictionMarkdownView",
-"markdown":"#### Phiên bản 2.0.2\n\nĐã sửa lỗi xóa mũi tên khiến không thể thêm bàn phím. bây giờ tất cả các mũi tên sẽ bị xóa ngoại trừ trên bàn phím."
+"markdown":"#### Phiên bản 2.0.7\n\nĐã sửa lỗi xóa mũi tên khiến không thể thêm bàn phím. bây giờ tất cả các mũi tên sẽ bị xóa ngoại trừ trên bàn phím."
 },
 {
 "class":"DepictionLabelView",
