--- a/sileodepictions/AppData.json
+++ b/sileodepictions/AppData.json
@@ -12,7 +12,7 @@
 "title":"Mô tả & Giới thiệu"
 },
 {
-"markdown":"Xem và truy cập dữ liệu ứng dụng của bạn bằng cách vuốt lên trên biểu tượng hoặc dùng cảm ứng lực\n\n- Các tính năng bao gồm:\n\n- Xem kích thước và phiên bản gói ứng dụng\n\n- Xem và sao chép số ID nhận dạng gói ứng dụng\n\n- Chỉnh sửa tên biểu tượng ứng dụng\n\n- Xóa hoặc cập nhật số huy hiệu ứng dụng\n\n- Kiểm tra kích thước dữ liệu/bộ đệm của ứng dụng và xóa chúng\n\n- Hạ cấp ứng dụng\n\n- Giảm tải ứng dụng bằng cách gỡ cài đặt ứng dụng và giữ lại dữ liệu\n\- Đặt lại quyền ứng dụng\n\n- Truy cập gói ứng dụng và vùng chứa dữ liệu\n\n- Truy cập các nhóm vùng chứa ứng dụng\n\n- Mở trang AppStore của ứng dụng\n\nㅤ\n\n",
+"markdown":"Xem và truy cập dữ liệu ứng dụng của bạn bằng cách vuốt lên trên biểu tượng hoặc dùng cảm ứng lực\n\n- Các tính năng bao gồm:\n\n- Xem kích thước và phiên bản gói ứng dụng\n\n- Xem và sao chép số ID nhận dạng gói ứng dụng\n\n- Chỉnh sửa tên biểu tượng ứng dụng\n\n- Xóa hoặc cập nhật số huy hiệu ứng dụng\n\n- Kiểm tra kích thước dữ liệu,bộ đệm của ứng dụng và xóa chúng\n\n- Hạ cấp ứng dụng\n\n- Giảm tải ứng dụng bằng cách gỡ cài đặt ứng dụng và giữ lại dữ liệu\n\n- Đặt lại quyền ứng dụng\n\n- Truy cập gói ứng dụng và vùng chứa dữ liệu\n\n- Truy cập các nhóm vùng chứa ứng dụng\n\n- Mở trang AppStore của ứng dụng\n\nㅤ\n\n",
 "useSpacing":"true",
 "class":"DepictionMarkdownView"
 },
